Fix scaling on mobile

--- a/wordle-solver.css
+++ b/wordle-solver.css
@@ -16,10 +16,18 @@ body {
     color: var(--clight);
 }
 
+@media only screen and (max-width: 600px) {
+    header,
+    main {
+        width: 100%;
+    }
+}
+
 header,
 main {
     width: 60%;
 }
+
 
 header {
     text-align: center;
